--- a/HTML_courses/links.html
+++ b/HTML_courses/links.html
@@ -87,17 +87,36 @@
     }
 
     /* ========= SIDEBAR ========= */
-    .sidebar{
-      position:sticky; top:calc(var(--nav-h) + 24px);
-      align-self:start;
-      background:linear-gradient(180deg, rgba(18,25,42,.8), rgba(12,18,33,.7));
-      border:1px solid rgba(255,255,255,.06);
-      border-radius:20px;
-      box-shadow:var(--shadow);
-      padding:12px;
-      color:#cfe0ff;
-      overflow:hidden;
-    }
+/* ========= SIDEBAR ========= */
+.sidebar {
+  position: sticky;
+  top: calc(var(--nav-h) + 24px);
+  align-self: start;
+  background: linear-gradient(180deg, rgba(18, 25, 42, 0.8), rgba(12, 18, 33, 0.7));
+  border: 1px solid rgba(255, 255, 255, 0.06);
+  border-radius: 20px;
+  box-shadow: var(--shadow);
+  padding: 12px;
+  color: #cfe0ff;
+
+  /* 👇 Scrollbar logic */
+  max-height: calc(100vh - var(--nav-h) - 48px); /* Adjust as needed */
+  overflow-y: auto;
+  scrollbar-width: thin; /* Firefox */
+  scrollbar-color: #555 transparent;
+}
+
+/* Optional: Style scrollbar for WebKit browsers */
+.sidebar::-webkit-scrollbar {
+  width: 6px;
+}
+.sidebar::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+}
+.sidebar::-webkit-scrollbar-track {
+  background: transparent;
+}
     .collapse-toggle{
       width:100%; background:transparent; border:none; color:#9fb3d8;
       display:flex; align-items:center; gap:10px; padding:10px 12px; border-radius:12px; cursor:pointer;
@@ -196,12 +215,12 @@
         <span class="brand-badge" aria-hidden="true"></span>
         DevNest
       </a>
-      <nav class="nav-links" aria-label="Primary">
-        <a href="/">Home</a>
+         <nav class="nav-links" aria-label="Primary">
+        <a href="/Main_web_page.html">Home</a>
         <a href="/courses.html" style="color:var(--text)">Courses</a>
-        <a href="/practice.html">Practice</a>
-        <a href="/projects.html">Projects</a>
-        <a href="/about.html">About</a>
+        <a href="/mini_code_editor.html">Practice</a>
+        <a href="/project_section.html">Projects</a>
+        <a href="/Main_web_page.html#about">About</a>
       </nav>
       <!-- <button class="login-btn">Login</button>
       <div class="hamburger">
@@ -227,7 +246,7 @@
             <a href="structure.html">Structure</a>
             <a href="heading.html">Headings &amp; Paragraphs</a>
             <a href="lists.html">Lists</a>
-            <a href="links.html" class="active">Links</a>
+            <a href="#" class="active">Links</a>
             <a href="images.html">Images</a>
             <a href="tables.html">Tables</a>
             <a href="forms.html">Forms</a>
