--- a/HTML_courses/structure.html
+++ b/HTML_courses/structure.html
@@ -89,17 +89,36 @@
   }
 
   /* ========= SIDEBAR ========= */
-  .sidebar{
-    position:sticky; top:calc(var(--nav-h) + 24px);
-    align-self:start;
-    background:linear-gradient(180deg, rgba(18,25,42,.8), rgba(12,18,33,.7));
-    border:1px solid rgba(255,255,255,.06);
-    border-radius:20px;
-    box-shadow:var(--shadow);
-    padding:12px;
-    color:#cfe0ff;
-    overflow:hidden;
-  }
+  /* ========= SIDEBAR ========= */
+.sidebar {
+  position: sticky;
+  top: calc(var(--nav-h) + 24px);
+  align-self: start;
+  background: linear-gradient(180deg, rgba(18, 25, 42, 0.8), rgba(12, 18, 33, 0.7));
+  border: 1px solid rgba(255, 255, 255, 0.06);
+  border-radius: 20px;
+  box-shadow: var(--shadow);
+  padding: 12px;
+  color: #cfe0ff;
+
+  /* 👇 Scrollbar logic */
+  max-height: calc(100vh - var(--nav-h) - 48px); /* Adjust as needed */
+  overflow-y: auto;
+  scrollbar-width: thin; /* Firefox */
+  scrollbar-color: #555 transparent;
+}
+
+/* Optional: Style scrollbar for WebKit browsers */
+.sidebar::-webkit-scrollbar {
+  width: 6px;
+}
+.sidebar::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+}
+.sidebar::-webkit-scrollbar-track {
+  background: transparent;
+}
   .collapse-toggle{
     width:100%; background:transparent; border:none; color:#9fb3d8;
     display:flex; align-items:center; gap:10px; padding:10px 12px; border-radius:12px; cursor:pointer;
@@ -215,14 +234,14 @@
         <a href="/courses.html" style="color:var(--text)">Courses</a>
         <a href="/mini_code_editor.html">Practice</a>
         <a href="/project_section.html">Projects</a>
-        <a href="/about.html">About</a>
+        <a href="/Main_web_page.html#about">About</a>
       </nav>
 
-      <button class="login-btn">Login</button>
+      <!-- <button class="login-btn">Login</button>
 
       <div class="hamburger">
         <button class="login-btn" style="padding:8px 14px;">Menu</button>
-      </div>
+      </div> -->
     </div>
   </header>
 
@@ -242,8 +261,8 @@
         <details open>
           <summary>Basics <span class="chev" aria-hidden="true">▶</span></summary>
           <nav class="menu">
-            <a href="intro.html">HTML Introduction</a>
-            <a href="structure.html" class="active">Structure</a>
+            <a href="introduction.html">HTML Introduction</a>
+            <a href="#" class="active">Structure</a>
             <a href="heading.html">Headings & Paragraphs</a>
             <a href="lists.html">Lists</a>
             <a href="links.html">Links</a>
