--- a/courses.html
+++ b/courses.html
@@ -34,7 +34,7 @@
         <li>Transitions & Animations</li>
         <li>Media Queries</li>
       </ul>
-      <a href="/courses/css" style="display: inline-block; margin-top: 10px; padding: 10px 15px; background-color: #00bfff; color: #fff; border-radius: 6px; text-decoration: none;">Learn More</a>
+      <a href="ProjectCSS\ProjectCSS\index.html" style="display: inline-block; margin-top: 10px; padding: 10px 15px; background-color: #00bfff; color: #fff; border-radius: 6px; text-decoration: none;">Learn More</a>
     </div>
 
     <!-- JavaScript Card -->
@@ -46,7 +46,7 @@
         <li>DOM & Events</li>
         <li>Loops & Conditions</li>
       </ul>
-      <a href="/courses/javascript" style="display: inline-block; margin-top: 10px; padding: 10px 15px; background-color: #ffd700; color: #000; border-radius: 6px; text-decoration: none;">Learn More</a>
+      <a href="projectJS\index.html" style="display: inline-block; margin-top: 10px; padding: 10px 15px; background-color: #ffd700; color: #000; border-radius: 6px; text-decoration: none;">Learn More</a>
     </div>
   </div>
 </section>
